# otter

./: README.md  pyproject.toml
otter/: __init__.py  metrics.py  semantic_matching.py
otter/classification/: __init__.py  fuzzy_similarity.py  semantic_matching.py  zeroshot.py
otter/label_discovery/: __init__.py  community_detection.py
